Remove chktex warnings.

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 \usepackage{xeCJK}
 
 \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase} % to support TeX conventions like ‘‘---’’
-\XeTeXlinebreaklocale "ja"
+\XeTeXlinebreaklocale "ja" % chktex 1 chktex 18
 \setmainfont{AozoraMinchoRegular.ttf}
 \setCJKmainfont{AozoraMinchoRegular.ttf}
 \setCJKsansfont{AozoraMinchoLight.ttf}
