Update address, phone number and age.

--- a/main.tex
+++ b/main.tex
@@ -31,18 +31,18 @@
 \名{Alexis}
 \姓読み{ジャンドー}
 \名読み{アレクシ}
-\性別{男}					% 男|女
+\性別{男}
 \誕生日{平成2年7月2日}
-\年齢{24}
+\年齢{27}
 
 %
 % 現住所
 %
-\現住所郵便番号{174--0043}
-\現住所{東京都板橋区坂下 2--6--3--305}
-\現住所読み{とうきょうと いたばしく さかした}
+\現住所郵便番号{164--0002}
+\現住所{東京都中野区上高田 2--3--43}
+\現住所読み{とうきょうと　なかのく　かみたかだ}
 \現住所市外局番{}
-\現住所電話番号{080--6791--5920}
+\現住所電話番号{090--6791--5920}
 \現住所呼び出し{}
 
 %
