--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% !TEX program = xelatex
+% !TEX program = lualatex
 
 \documentclass{article}
 % Force B5 PDF generation
@@ -6,18 +6,10 @@
 % Import from the submodule
 \usepackage{rireki-style/rireki}
 % Extra customizations for XeLaTeX
-\usepackage{xltxtra}
-\usepackage{fontspec}
-\usepackage{xunicode}
-\usepackage{xeCJK}
-
-% To support TeX conventions like "---"
-\defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
-\XeTeXlinebreaklocale "ja" % chktex 1 chktex 18
-\setmainfont{AozoraMinchoRegular.ttf}
-\setCJKmainfont{AozoraMinchoRegular.ttf}
-\setCJKsansfont{AozoraMinchoLight.ttf}
-\setCJKmonofont{AozoraMinchoLight.ttf}
+\usepackage{ifluatex}
+\usepackage{luatex85}
+% Load luatexja-fontspec and set IPA fonts for Japanese text
+\usepackage[ipaex,no-math]{luatexja-preset}
 
 % Redefine the date of today in japanese, in order to display
 % XXXX年XX月XX日現在on top of the first page
