--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 \名読み{アレクシ}
 \性別{男}
 \誕生日{平成2年7月2日}
-\年齢{27}
+\年齢{28}
 
 \ifdefined\withphoto%
 \顔写真{photo.jpg}
@@ -83,8 +83,10 @@
 %\職歴{平成9}{4}{株式会社◯◯ 入社}
 %\職歴{平成10}{9}{株式会社◯◯ 退職}
 \職歴{2012}{5}{タカハシ技研合同会社　入社}
+\職歴{2016}{4}{タカハシ技研合同会社　退職}
+\職歴{2016}{4}{株式会社Z-Works　入社}
 %\職歴{平成18}{10}{現在無職}
-%\職歴{}{}{現在に至る}
+\職歴{}{}{現在に至る}
 
 %
 % 資格
