Update for Mixi

--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \setCJKsansfont{AozoraMinchoLight.ttf}
 \setCJKmonofont{AozoraMinchoLight.ttf}
 
-% Redefine the date of today in japanese, in order to display
+% Redefine the date of today in Japanese, in order to display
 % XXXX年XX月XX日現在on top of the first page
 \renewcommand{\today}{\the\year{}年\the\month{}月\the\day{}日}
 
@@ -104,31 +104,36 @@
 % 志望の動機と本人希望記入欄はlatex のコマンドを記述できます。
 %
 \志望の動機{
-    \begin{tabular}{ll}
-        { 志望の動機} & ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯\\
-        { 特技} & フランス語、英語、コンピューター（プログラミングなど）\\
-        { 好きな学科} & 言語学、コンピューター科学\\
-        { アピールポイント} & ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯\\
-    \end{tabular}
+    % \begin{tabular}{ll}
+    %     { 志望の動機} & ∞∞∞∞∞∞ \\
+    %     { 特技} & フランス語、英語 \\
+    %     { アピールポイント} & ∞∞∞∞∞∞ \\
+    % \end{tabular}
+    現在Erlangを使ってIoTプラットフォームのサーバサイド開発に携わっていますが、
+    ゲーム開発、特にオンライン \newline ゲームについてはずっと興味をもっています。 \\
+    貴社では常に新しい技術を採用して大勢の人に利用されているゲームを作っている点に魅力を感じております。 \\
+    現在Elixirを勉強中であり、貴社では本言語を使用したソフトウェアを開発しているとお聞きしました。 \\
+    私も是非自分の知識や経験を活かしながらその一員として開発に参加できればと考えております。
 }
 \本人希望記入欄{
-    私が希望する仕事の条件は下記の通りです。
+    % 私が希望する仕事の条件は下記の通りです。
     \begin{itemize}
-        \item ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯
-        \item ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯
-        \item ◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯◯
+        \item サーバサイドエンジニアを希望いたします。
+        \item 現在就業中のため、平日10～19時はお電話に出られない場合があります。 \\
+            折り返しご連絡いたしますので、恐れ入りますが留守番電話にメッセージを残していただけると幸いです。
+        % \item 貴社の規定に従います
     \end{itemize}
 }
 
 %
 % その他
 %
-\通勤時間{約 1時間30分}
-\扶養家族数{1}					% 人数(配偶者を除きます)
-\配偶者{なし}					% あり|なし
-\配偶者の扶養義務{なし}			% あり|なし
+\通勤時間{約 40分}
+\扶養家族数{0}          % 人数(配偶者を除きます)
+\配偶者{なし}           % あり|なし
+\配偶者の扶養義務{なし} % あり|なし
 
-%\サイン{A. Jeandeau}
+% \サイン{A. Jeandeau}
 \サイン{}
 
 \end{document}
