Update formatting in 学歴 / 職歴

--- a/main.tex
+++ b/main.tex
@@ -71,13 +71,13 @@
 %
 %\学歴{平成1}{4}{○○市立◯◯高等学校 入学}      % {年}{月}{内容}
 %\学歴{2001}{6}{École primaire d'Arc-sur-Tille　小学校　卒業}
-\学歴{2005}{6}{Collège Champollion　中学校　卒業}
-\学歴{2005}{9}{Lycée Carnot　高等学校　入学}
-\学歴{2006}{9}{Lycée le Castel　高等学校　編入}
-\学歴{2008}{6}{Lycée le Castel　高等学校　卒業}
-\学歴{2008}{9}{IUT de Dijon〔国立、コンピューター科学〕専門学校　入学}
+\学歴{2005}{6}{Collège Champollion （中学校）　卒業}
+\学歴{2005}{9}{Lycée Carnot （高等学校）　入学}
+\学歴{2006}{9}{Lycée le Castel （高等学校）　編入}
+\学歴{2008}{6}{Lycée le Castel （高等学校）　卒業}
+\学歴{2008}{9}{IUT de Dijon （国立、コンピューター科学）　専門学校　入学}
 \職歴{2010}{4}{CEA Valduc　３ヶ月のインターンシップ}
-\学歴{2010}{6}{IUT de Dijon〔国立、コンピューター科学〕専門学校　卒業}
+\学歴{2010}{6}{IUT de Dijon （国立、コンピューター科学）　専門学校　卒業}
 \学歴{2011}{10}{ヨシダ日本語学院　入学}
 \学歴{2012}{6}{ヨシダ日本語学院　卒業}
 %\職歴{平成9}{4}{株式会社◯◯ 入社}
