--- a/main.tex
+++ b/main.tex
@@ -94,9 +94,9 @@
 % 資格を取得年月順に列挙してください。9つまで記入できます。
 % 9つを超える部分は印刷されませんので、ご注意ください。
 %
-\資格{2008}{7}{普通運転免許〔フランス〕　取得}
+\資格{2008}{7}{普通運転免許（フランス）　取得}
 \資格{2012}{7}{日本語能力試験２級　取得}
-\資格{2014}{5}{普通運転免許〔日本〕　取得}
+\資格{2014}{5}{普通運転免許（日本）　取得}
 
 %
 % 個人情報
