Build the LaTeX documents using a Github Action

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage{fontspec}
 \usepackage{xunicode}
 \usepackage{xeCJK}
+\usepackage{CJKulem}
 
 % To support TeX conventions like "---"
 \defaultfontfeatures{Mapping=tex-text,Scale=MatchLowercase}
