Update the contents

--- a/main.tex
+++ b/main.tex
@@ -39,9 +39,9 @@
 %
 % 現住所
 %
-\現住所郵便番号{164--0002}
-\現住所{東京都中野区上高田 2--3--43}
-\現住所読み{とうきょうと　なかのく　かみたかだ}
+\現住所郵便番号{163--0008}
+\現住所{東京都中央区日本橋中洲6--10 ハイツ日本橋中洲307}
+\現住所読み{とうきょうと　ちゅうおうく　にほんばしなかす}
 \現住所市外局番{}
 \現住所電話番号{090--6791--5920}
 \現住所呼び出し{}
@@ -63,7 +63,6 @@
 % 20個を超える部分は印刷されませんので、ご注意ください。
 % 印刷順は、学歴=>職歴の順になります。
 %
-%\学歴{平成1}{4}{○○市立◯◯高等学校 入学}      % {年}{月}{内容}
 %\学歴{2001}{6}{École primaire d'Arc-sur-Tille　小学校　卒業}
 \学歴{2005}{6}{Collège Champollion （中学校）　卒業}
 \学歴{2005}{9}{Lycée Carnot （高等学校）　入学}
@@ -74,12 +73,11 @@
 \学歴{2010}{6}{IUT de Dijon （国立、コンピューター科学）　専門学校　卒業}
 \学歴{2011}{10}{ヨシダ日本語学院　入学}
 \学歴{2012}{6}{ヨシダ日本語学院　卒業}
-%\職歴{平成9}{4}{株式会社◯◯ 入社}
-%\職歴{平成10}{9}{株式会社◯◯ 退職}
 \職歴{2012}{6}{タカハシ技研合同会社　入社}
 \職歴{2016}{4}{タカハシ技研合同会社　退職}
 \職歴{2016}{4}{株式会社Z-Works　入社}
-%\職歴{平成18}{10}{現在無職}
+\職歴{2019}{8}{株式会社Z-Works　退職}
+\職歴{2019}{9}{株式会社ティアフォー　入社}
 \職歴{}{}{現在に至る}
 
 %
