--- a/shokumukeirekisho.tex
+++ b/shokumukeirekisho.tex
@@ -123,8 +123,25 @@
 
 \section{職務経歴}
 
-\subsection{\underline{2016年04月〜　株式会社Z-Works}}
+\subsection{\underline{2019年9月〜　株式会社ティアフォー}}
 
+%
+
+\subsection{\underline{2016年4月〜2019年8月　株式会社Z-Works}}
+\cventry{}{}{•技術本部所属　Webエンジニア}{}{}{%
+\begin{itemize}
+\item[] 【プロジェクト内容】
+    \begin{itemize}
+        \item 自動運転車両を運行管理するMaaSのデータ基盤の開発
+        \item 自動運転車両とクラウドを繋ぐメッセージング機能開発
+        \item 自動運転システムの状態・バージョン管理機能の開発
+    \end{itemize}
+\item[] 【技術】
+    \begin{description}
+        \item \techno{\href{https://aws.amazon.com/iot/}{AWS IoT}}, \techno{MQTT}, \techno{Python}, \techno{C++}
+    \end{description}
+\end{itemize}
+}
 \cventry{}{}{•介護者むけのIoTプロットフォームのバックエンド開発}{}{}{%
 \begin{itemize}
 \item[] 【プロジェクト内容】
@@ -162,7 +179,7 @@
 
 \vspace*{1em}
 
-\subsection{\underline{2012年05月〜2016年04月　タカハシ技研合同会社}}
+\subsection{\underline{2012年5月〜2016年4月　タカハシ技研合同会社}}
 
 \cventry{}{}{•イベント用のリアルタイム写真閲覧と管理サービス}{}{}{%
 \begin{itemize}
@@ -239,7 +256,7 @@
 \cvitem{モバイル}{\techno{Android}, \lang{Kotlin}}
 \cvitem{通信プロトコル}{\techno{AMQP}, \techno{MQTT}, \techno{XMPP}}
 \cvitem{プロジェクト管理}{\techno{Jira}, \techno{Redmine}}
-\cvitem{CI/CD}{\techno{Bitbucket Pipelines}, \techno{AWS CodeDeploy}, \techno{Jenkins}}
+\cvitem{CI/CD}{\techno{GitHub Actions}, \techno{Bitbucket Pipelines}, \techno{AWS CodeDeploy}, \techno{Jenkins}}
 \cvitem{バージョン管理\newline{}システム}{\techno{Git}, \techno{Mercurial}, \techno{Subversion}}
 
 \end{document}
