Switch to Libertinus

--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -5,6 +5,8 @@
 \lualatextrue
 \iflualatex
 \documentclass[b5j]{ltjsarticle}
+\usepackage{fontspec}
+\usepackage{libertinus}
 \usepackage[deluxe,nfssonly]{luatexja-preset}
 \usepackage{graphicx}
 \else
