--- a/shokumukeirekisho.tex
+++ b/shokumukeirekisho.tex
@@ -25,12 +25,7 @@
 \usepackage{microtype}
 
 \usepackage{fontspec}
-\setmainfont[
-    Ligatures=TeX,
-    Scale=MatchLowercase,
-    BoldFont=SourceSansPro-Semibold.otf,
-    ItalicFont=SourceSansPro-LightIt.otf,
-    BoldItalicFont=SourceSansPro-SemiboldIt.otf]{SourceSansPro-Light.otf}
+\usepackage{libertinus}
 \usepackage{polyglossia}
 \setdefaultlanguage{english}
 \setotherlanguage{french}
@@ -85,9 +80,6 @@
 \begin{document}
 
 \makecvtitle%
-
-% Reduce the length of the left column (used for the employment dates)
-\setlength{\hintscolumnwidth}{1cm}
 
 \section{職務経歴}
 
