Change the serif font scaling to better fit with the Japanese font

--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -5,8 +5,7 @@
 \lualatextrue
 \iflualatex
 \documentclass[b5j]{ltjsarticle}
-\usepackage{fontspec}
-\usepackage{libertinus}
+\usepackage[ScaleRM=1.1,nomath]{libertinus-otf}
 \usepackage[deluxe,nfssonly]{luatexja-preset}
 \usepackage{graphicx}
 \else
