Update the PDF keywords

--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -17,6 +17,16 @@
 
 \空行挿入 % 学歴と職歴の間に空行を挿入します
 
+\usepackage{hyperref}
+
+\AfterPreamble{\hypersetup{
+    pdfcreator     = {\LaTeX{}},
+    pdfauthor      = {Alexis~Jeandeau},
+    pdftitle       = {Alexis~Jeandeau -- 履歴書},
+    pdfsubject     = {Alexis~Jeandeau -- 履歴書},
+    pdfkeywords    = {Alexis~Jeandeau, 履歴書, cv, resume}
+}}
+
 \begin{document}
 
 %
