Change the scale of the serif font to better fit with the Japanese font

--- a/shokumukeirekisho.tex
+++ b/shokumukeirekisho.tex
@@ -24,8 +24,7 @@
 \usepackage[scale=0.9]{geometry}
 \usepackage{microtype}
 
-\usepackage{fontspec}
-\usepackage{libertinus}
+\usepackage[ScaleRM=1.1,nomath]{libertinus-otf}
 \usepackage{polyglossia}
 \setdefaultlanguage{english}
 \setotherlanguage{french}
