--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -85,6 +85,8 @@
 \職歴{2016}{4}{株式会社Z-Works　入社}
 \職歴{2019}{8}{株式会社Z-Works　退職}
 \職歴{2019}{9}{株式会社ティアフォー　入社}
+\職歴{2021}{2}{株式会社ティアフォー　退職}
+\職歴{2021}{3}{株式会社ノンピ　入社}
 \職歴{}{}{現在に至る}
 
 %
