--- a/shokumukeirekisho.tex
+++ b/shokumukeirekisho.tex
@@ -82,7 +82,24 @@
 
 \section{職務経歴}
 
-\subsection{\underline{2019年9月〜　株式会社ティアフォー}}
+\subsection{\underline{2021年3月〜　株式会社ノンピ}}
+
+\cventry{}{}{•テクノロジー推進本部所属　ソフトウェアエンジニア}{}{}{%
+\begin{itemize}
+\item[] 【プロジェクト内容】
+    \begin{itemize}
+        \item オンライン飲み会専用配達サービスのフルスタック開発
+    \end{itemize}
+\item[] 【技術】
+    \begin{description}
+        \item \techno{Go}, \techno{React}, \techno{MySQL}, \techno{Docker}
+    \end{description}
+\end{itemize}
+}
+
+\vspace*{1em}
+
+\subsection{\underline{2019年9月〜2021年2月　株式会社ティアフォー}}
 
 \cventry{}{}{•技術本部所属　Webエンジニア}{}{}{%
 \begin{itemize}
