--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -1,4 +1,14 @@
 % !TEX program = lualatex
+% !TEX encoding = UTF-8 Unicode
+% !TEX spellcheck = ja_JP
+
+\pdfvariable suppressoptionalinfo \numexpr
+    0
+    + 1 % PTEX.FullBanner
+    + 2 % PTEX.FileName
+    + 4 % PTEX.PageNumber
+    + 8 % PTEX.InfoDict
+\relax
 
 % See rireki-style/rireki.tex
 \newif\iflualatex
@@ -87,6 +97,8 @@
 \職歴{2019}{9}{株式会社ティアフォー　入社}
 \職歴{2021}{2}{株式会社ティアフォー　退職}
 \職歴{2021}{3}{株式会社ノンピ　入社}
+\職歴{2021}{8}{株式会社ノンピ　退職}
+\職歴{2021}{9}{楽天グループ株式会社　入社}
 \職歴{}{}{現在に至る}
 
 %
@@ -112,7 +124,7 @@
 %
 % その他
 %
-\通勤時間{約 40分}
+\通勤時間{約 50分}
 \扶養家族数{0}
 \配偶者{なし}
 \配偶者の扶養義務{なし}
