--- a/shokumukeirekisho.tex
+++ b/shokumukeirekisho.tex
@@ -1,4 +1,14 @@
 % !TEX program = lualatex
+% !TEX encoding = UTF-8 Unicode
+% !TEX spellcheck = ja_JP
+
+\pdfvariable suppressoptionalinfo \numexpr
+    0
+    + 1 % PTEX.FullBanner
+    + 2 % PTEX.FileName
+    + 4 % PTEX.PageNumber
+    + 8 % PTEX.InfoDict
+\relax
 
 \documentclass[11pt,a4paper]{moderncv}
 
