--- a/rirekisho.tex
+++ b/rirekisho.tex
@@ -161,9 +161,10 @@ end
 % 9つを超える部分は印刷されませんので、ご注意ください。
 %
 \資格{2008}{7}{普通運転免許（フランス）　取得}
-\資格{2012}{7}{日本語能力試験２級　取得}
+% \資格{2012}{7}{日本語能力試験　N2　取得}
 \資格{2014}{5}{普通運転免許（日本）　取得}
 \資格{2021}{7}{TOEIC　990}
+\資格{2022}{7}{日本語能力試験　N1　取得}
 
 %
 % 個人情報
